--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/africashop?autoreconnect = true&useSSL=false&serverTimezone=Europe/Brussels&useLegacyDatetimeCode=false
+server.port=8080
+spring.datasource.username = root
+spring.datasource.password =
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
